[package]
name = "old_redlock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
tokio = { version = "1.28.0", features = ["sync", "rt-multi-thread", "time", "macros"] }
tracing = "0.1.37"
rand = "0.8.5"
rand_chacha = "0.3.1"
anyhow = "1.0.71"

[dev-dependencies]

